--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ input[type=submit]:hover {
   flex-direction: row;
   flex-wrap: nowrap;
   padding-top: 100px;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 .container-2 .foto-perfil {
@@ -161,7 +161,7 @@ input[type=submit]:hover {
   font-size: 1.8em;
   color: #1f1f1f;
   border-left: 4px solid #ff00ea;
-  padding-left: 4px;
+  padding-left: 10px;
 }
 
 .container-2 p {
@@ -173,6 +173,36 @@ input[type=submit]:hover {
   margin-bottom: 20px;
 }
 
+/* CONTAINER 3 */
+
 .container-3 {
-  display: grid;
+  color: #fff;
+  background-image: linear-gradient(to bottom right, rgb(255, 0, 234), rgb(0, 81, 255));
+  padding-bottom: 40px;
+}
+
+.container-3 ul {
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 40px 0;
+  text-align: center;
+}
+
+.container-3 ul li a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  height: 3em;
+  width: 3em;
+  padding: 40px;
+  margin: 20px 10px;
+}
+
+.container-3 .logo-lang {
+  background-position: center; background-repeat: no-repeat; background-size: contain;
 }
