--- a/css/style.css
+++ b/css/style.css
@@ -65,223 +65,13 @@ input[type=submit] {
   font-weight: 600;
   width: 100%;
   border: 1px solid #ccc;
+  border-radius: 10px;
   margin: 14px 0;
   padding: 10px;
+  transition: 0.2s;
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-image: linear-gradient(to bottom right, rgb(0, 255, 60), rgb(0, 255, 47));
 }
 
-/* CONTAINER 1 */
-
-.container-1 {
-  color: #fff;
-  background-image: linear-gradient(to bottom right, rgb(255, 0, 234), rgb(0, 81, 255));
-  padding-bottom: 40px;
-}
-
-.container-1 a {
-  color: #fff;
-  font-weight: 500;
-}
-
-.container-1 label {
-  color: #4e4e4e;
-  font-weight: 400;
-}
-
-.topnav{
-  background-image: linear-gradient(to bottom right, #ff00ea, #0051ff);
-  position: sticky;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 0;
-  border-bottom: 1px solid #ccc;
-  padding: 20px 0;
-}
-
-.topnav a {
-  color: #fff;
-  font-weight: 500;
-  margin: 0 20px;
-}
-
-.form-1 {
-  background-color: #f2f2f2;
-  max-width: 400px;
-  border-radius: 5px;
-  padding: 20px;
-  margin: 0 auto;
-  margin-bottom: 40px;
-}
-
-.container-1 {
-  padding-top: 50px;
-}
-
-.container-1 h1 {
-  line-height: 36px;
-  font-size: 2em;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.container-1 p {
-  text-align: center;
-  font-size: 1em;
-  margin-top: 10px;
-  margin-bottom: 50px;
-}
-
-.container-1 .arrow-down {
-  display: flex;
-  width: 40px;
-  margin: 0 auto;
-}
-
-/* CONTAINER 2 */
-
-.container-2 {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  padding-top: 100px;
-  padding-bottom: 60px;
-}
-
-.container-2 .foto-perfil {
-  display: flex;
-  margin: 0 auto;
-  margin-bottom: 40px;
-  width: 100%;
-  max-width: 300px;
-  border-radius: 50%;
-}
-
-.container-2 .text-area {
-  padding: 20px;
-}
-
-.container-2 .arrow-down {
-  width: 40px;
-  margin: 0 auto;
-}
-
-.container-2 h2 {
-  font-size: 1.8em;
-  color: #1f1f1f;
-  border-left: 4px solid #ff00ea;
-  padding-left: 10px;
-}
-
-.container-2 p {
-  font-size: 0.9em;
-  color: #3b3b3b;
-}
-
-.container-2 .text-area p, .container-2 .text-area h2 {
-  margin-bottom: 20px;
-}
-
-/* CONTAINER 3 */
-
-.container-3 {
-  color: #fff;
-  background-image: linear-gradient(to bottom right, rgb(255, 0, 234), rgb(0, 81, 255));
-  padding-bottom: 40px;
-}
-
-.container-3 ul {
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 40px 0;
-  text-align: center;
-}
-
-.container-3 ul li a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: #fff;
-  border: 4px solid #fff;
-  border-radius: 50%;
-  height: 3em;
-  width: 3em;
-  padding: 40px;
-  margin: 20px 10px;
-}
-
-.container-3 .logo-lang {
-  background-position: center; background-repeat: no-repeat; background-size: contain;
-  cursor: pointer;
-}
-
-.container-3 .text-area {
-  padding: 20px;
-}
-
-.container-3 p {
-  font-size: 0.9em;
-}
-
-.container-3 h2 {
-  font-size: 1.8em;
-  border-left: 4px solid #fff;
-  padding-left: 10px;
-}
-
-.container-3 .text-area p, .container-3 .text-area h2 {
-  margin-bottom: 20px;
-}
-
-.container-3 .arrow-down {
-  display: flex;
-  width: 40px;
-  margin: 0 auto;
-  margin-top: 40px;
-}
-
-/* CONTAINER 4 */
-
-.container-4 {
-  padding: 40px 20px;
-}
-
-.container-4 ul {
-  list-style-type: none;
-}
-
-.container-4 ul li {
-  background-color: #eee;
-  border-radius: 20px;
-  margin: 0 auto;
-  width: 400px;
-  margin-bottom: 40px;
-  box-shadow: #b1b1b1 1px 1px 20px;
-  padding-bottom: 20px;
-}
-
-.container-4 ul li img {
-  display: flex;
-  width: 100%;
-  max-width: 400px;
-  border-top-left-radius: inherit;
-  border-top-right-radius: inherit;
-  width: 100%;
-}
-
-.container-4 ul li .text-area {
-  width: 100%;
-  max-width: 400px;
-  padding: 20px;
-}
-
-.container-4 ul li button {
-  display: flex;
-  padding: 10px 20px;
-  margin: auto;
-}
