--- a/css/style.css
+++ b/css/style.css
@@ -5,30 +5,6 @@
   font-family: 'poppins', Arial, Helvetica, sans-serif;
 }
 
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-[class*="col-"] {
-  float: left;
-  padding: 15px;
-}
-
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 50%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
-
 a {
   text-decoration: none;
 }
@@ -74,4 +50,31 @@ input[type=submit] {
 input[type=submit]:hover {
   background-image: linear-gradient(to bottom right, rgb(0, 255, 60), rgb(0, 255, 47));
 }
+
+.whatsapp {
+  background-image: linear-gradient(to bottom right, rgb(0, 255, 60), rgb(0, 255, 47));
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  padding: 10px;
+  border-radius: 30px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 14px;
+  top: 40%;
+  right: 0;
+  z-index: 999;
+}
+
+.whatsapp img {
+  width: 60px;
+}
+
+.whatsapp h3 {
+  font-size: 0.9em;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
 
