--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,11 @@ input[type=text]{
   box-sizing: border-box;
 }
 
-input[type=email]:focus::placeholder, input[type=number]:focus::placeholder {
+input[type=email]:focus::placeholder, input[type=tel]:focus::placeholder, input[type=text]:focus::placeholder {
   color: #fff;
 }
 
-input[type=email]:focus {
+input[type=email]:focus ,input[type=tel]:focus ,input[type=text]:focus {
   background-image: linear-gradient(to bottom right, rgb(255, 0, 234), rgb(0, 81, 255));
   color: #fff;
 }
@@ -50,31 +50,4 @@ input[type=submit] {
 input[type=submit]:hover {
   background-image: linear-gradient(to bottom right, rgb(0, 255, 60), rgb(0, 255, 47));
 }
-
-.whatsapp {
-  background-image: linear-gradient(to bottom right, rgb(0, 255, 60), rgb(0, 255, 47));
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  padding: 10px;
-  border-radius: 30px;
-  border-top-right-radius: 0;
-  border-bottom-right-radius: 14px;
-  top: 40%;
-  right: 0;
-  z-index: 999;
-}
-
-.whatsapp img {
-  width: 60px;
-}
-
-.whatsapp h3 {
-  font-size: 0.9em;
-  margin-bottom: 5px;
-  color: #fff;
-}
-
 
