--- a/css/footer.css
+++ b/css/footer.css
@@ -6,10 +6,28 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   padding: 20px;
   padding-bottom: 40px;
   background-color: blue;
   z-index: 1;
+}
+
+.footer .links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
+}
+
+.footer .links a {
+  font-size: 0.8em;
+  color: #fff;
+  margin: 10px;
+}
+
+.footer .links a:hover {
+  text-decoration: underline;
 }
 
 .footer p a {
