--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ input[type=email]:focus ,input[type=tel]:focus ,input[type=text]:focus {
 }
 
 input[type=submit] {
-  background-image: linear-gradient(to bottom right, rgb(255, 0, 234), rgb(0, 81, 255));
+  background-image: linear-gradient(to bottom right, #ff00ea, #0051ff);
   color: #fff;
   text-transform: uppercase;
   font-weight: 600;
