--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@import url(container-1.css);
+@import url(container-2.css);
+@import url(container-3.css);
+@import url(container-4.css);
+@import url(footer.css);
+@import url(navBar.css);
+@import url(style-responsive.css);
+@import url(topnav.css);
+@import url(whatsapp.css);
+
 * {
   margin: 0;
   padding: 0;
